--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,5 +26,6 @@ requires = [
 	 'dash_core_components >=1.17.1',
 	 'dash_html_components >=1.1.4',
 	 'PyPDF2 >=1.26.0',
-	 'igor >=0.3'
+	 'igor >=0.3',
+	 'kaleido >=0.2.1'
 ]
